--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -33,7 +33,7 @@ rss: /atom.xml
 # "5": show images form bg-1.jpg to bg-5.jpg in `/yelee/source/background/`
 # "5": 显示`/yelee/source/background/`文件夹中 bg-1.jpg 到 bg-5.jpg 这5张图片
 # "0": white-gray background | 淳朴灰白背景
-background_image: 2
+background_image: 0
 
 # Content
 excerpt_link: more
@@ -48,7 +48,7 @@ open_in_new: false
 
 # Miscellaneous
 #google_analytics: ''
-favicon: /favicon.png
+favicon: /img/avatar.jpg
 
 #你的头像url
 avatar: /img/avatar.jpg
@@ -59,7 +59,7 @@ avatar: /img/avatar.jpg
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
 #注册多说后，地址前面的就是你的 duoshuo-key http://duoshuo-key.duoshuo.com
-duoshuo: hf136
+# duoshuo: hf136
 
 #是否开启云标签
 tagcloud: true
@@ -84,6 +84,10 @@ aboutme: 一切皆有可能
 #是否显示边栏中的搜索框 
 #Search Box in left column
 search_box: true
+
+search:
+  on: true
+  onload: true
 
 #Site Verification for Google and Baidu. HTML label content.
 #百度、谷歌站长验证。填写 HTML 标签 content
