--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "hexo-generator-baidu-sitemap": "^0.1.5",
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-feed": "^1.0.3",
-    "hexo-generator-index": "^0.1.2",
+    "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-search": "^2.3.0",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.1.1",
