--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -128,7 +128,7 @@ base_font_size: 16  #px, 16 - 24
 color_scheme:
 
 highlight_style:
-  #on: true
+  on: true
   inline_code: 1  # Value: 0 - 9 可选
   code_block: 1  # Value: 0 - 4 
   # Set inline_code to style highlight text
