--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -41,7 +41,7 @@ since: 2018
 ## https://github.com/hexojs/hexo-generator-feed
 
 subnav:
-  Email: "mailto:hf.13699@gmail.com"
+  Email: "mailto:wuyueqiu666@foxmail.com"
   #新浪微博: "sina weibo"
   GitHub: "https://github.com/hf136"
   #V2EX: "#"
